fixed spacing issues

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Montserrat', sans-serif;
-    font-size: 26px;
+    font-size: 22px;
     font-weight: 200;
     text-align: center;
     background-color: #34A6FB;
